syntax = "proto3";
package MovieProto;
option go_package = "./";

import "google/api/annotations.proto";

message SeachRequest {
  int32 pagination = 1;
  string searchword = 2;
}

message SearchResponse {
    string trxid =1;
    string error_code =2;
    string error_message =3;
    repeated Movie list = 4;
}

message Movie {
  string Title = 1;
  string Year = 2;
  string imdbID = 3;
  string Type = 4;
  string Poster = 5;
}

service GetMovieInfo {
  rpc GetMovie(SeachRequest) returns (SearchResponse) {
  option (google.api.http) = {
   post: "/v1/query/getmovieinfo"
     body: "*"
   };
  }
}